--- a/src/components/main/products.css
+++ b/src/components/main/products.css
@@ -11,3 +11,51 @@
         align-items: center;
         gap: 20px;
 }
+
+
+
+.pokemon-container{
+        background-color: rgb(255, 255, 255);
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        height: 100%;
+        box-shadow: 0px -2px 28px -16px rgba(0,0,0,0.47);
+        -webkit-box-shadow: 0px -2px 28px -16px rgba(0,0,0,0.47);
+        -moz-box-shadow: 0px -2px 28px -16px rgba(0,0,0,0.47);
+        border-radius: 100px;
+        
+}
+
+
+.sprite-container{
+        
+        display: flex;
+        flex: 3;
+        align-content: center;
+        justify-content: center;
+        
+}
+
+
+.pokemon-name{
+        display: flex;
+        font-size: 60px;
+        text-decoration: none;	
+        list-style-type: none;
+        justify-content: center;
+        font-size: 20px;
+        color: black;
+        font-weight: bold;
+        font-family: 'Nunito Variable', sans-serif;
+}
+
+.type-container-container{
+        display: flex;
+        font-size: 20px;
+        text-decoration: none;	
+        list-style-type: none;
+        justify-content: center;
+        
+        text-align: center;
+}
