Minimos cambios de estilos
Se separo el contenedor de los productows del footer

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -47,7 +47,7 @@ import { TOPOLOGY } from '../assets/images/topologyBackground';
 	}
 
 	.footer-container{
-		grid-area: footer;
+		margin-top: 2rem;
 	}
 </style>
 
