--- a/src/components/main/products.css
+++ b/src/components/main/products.css
@@ -1,19 +1,19 @@
 .products-container{
         align-self: center;
-        max-width: 80%;
+        max-width: 90%;
         display: grid;
         min-height: 100vh;
-        grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-        grid-auto-rows: 200px;
+        grid-template-columns: repeat(4, minmax(300px, 1fr));
+        grid-auto-rows: 300px;
         justify-items: center;
         align-items: center;
-        gap: 20px;
+        gap: 30px;
         margin-bottom: 2rem;
 }
 
 
 
-.pokemon-container{
+.product-container{
         background-color: rgb(255, 255, 255);
         display: flex;
         flex-direction: column;
@@ -24,6 +24,23 @@
         -moz-box-shadow: 0px -2px 28px -16px rgba(0,0,0,0.47);
         border-radius: 100px;
         
+}
+
+.product-container:nth-child(2){
+        grid-row: span 2;
+}
+
+.product-container:nth-child(5){
+        grid-column: span 2;
+}
+
+.product-container:nth-child(3){
+        background-color: rgb(246, 215, 215);
+        grid-column: span 2;
+}
+
+.product-container:nth-child(6){
+        grid-column: span 4;
 }
 
 
