--- a/src/components/main/products.css
+++ b/src/components/main/products.css
@@ -9,6 +9,7 @@
         align-items: center;
         gap: 30px;
         margin-bottom: 2rem;
+        
 }
 
 
@@ -28,6 +29,7 @@
 
 .product-container:nth-child(2){
         grid-row: span 2;
+        background-color: aquamarine;
 }
 
 .product-container:nth-child(5){
