api de amazon muestra imagen
satisfactoriamente se mostro un producto con su imagen, nombre, etc...

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,7 +14,7 @@ import { TOPOLOGY } from '../assets/images/topologyBackground';
 		<Header/>
 	</header>
 	
-	<main class="main-container flex flex-col z-10">
+	<main class="main-container flex flex-col content-center z-10">
 		<Main client:visible/>
 	</main>
 	
