--- a/src/components/main/products.css
+++ b/src/components/main/products.css
@@ -1,6 +1,6 @@
 .products-grid{
         align-self: center;
-        max-width: 90%;
+        max-width: 100%;
         display: grid;
         min-height: 100vh;
         grid-template-columns: repeat(4, minmax(300px, 1fr));
@@ -9,6 +9,8 @@
         align-items: center;
         gap: 30px;
         margin-bottom: 2rem;   
+        padding-left: 30px;
+        padding-right: 30px;
 }
 
 .category-section-container{
@@ -28,7 +30,7 @@
 
 
 .product-container{
-        
+       
         background-color: rgb(255, 255, 255);
         display: flex;
         flex-direction: column;
@@ -41,6 +43,8 @@
         color: #3E665F;
         
 }
+
+
 
 .category-section-container:nth-child(2){
         grid-row: span 2;
@@ -60,25 +64,29 @@
 
 
 .sprite-container{
-        
+        width: 100%;
+        height: 70%;
         display: flex;
-        flex: 3;
         align-content: center;
         justify-content: center;
+        padding: 5px;
         
+}
+
+.sprite-container>picture>img{
+        object-fit: cover; /* Ajusta la imagen manteniendo la proporción */
+        width: 100%;
+        height: 100%;
 }
 
 
 .pokemon-name{
         display: flex;
-        font-size: 60px;
+        font-size: 10px;
         text-decoration: none;	
         list-style-type: none;
         justify-content: center;
-        font-size: 20px;
         color: black;
-        font-weight: bold;
-        font-family: 'Nunito Variable', sans-serif;
 }
 
 .type-container-container{
