--- a/src/components/main/products.css
+++ b/src/components/main/products.css
@@ -24,6 +24,7 @@
         -moz-box-shadow: 0px -2px 28px -16px rgba(0,0,0,0.47);
         border-radius: 50px;
         color: #3E665F;
+        overflow: hidden;
         
 }
 
@@ -35,12 +36,19 @@
         display: flex;
         flex-direction: column;
         width: 100%;
-        height: 100%;
+        height: 90%;
         box-shadow: 0px -2px 28px -16px rgba(0,0,0,0.47);
         -webkit-box-shadow: 0px -2px 28px -16px rgba(0,0,0,0.47);
         -moz-box-shadow: 0px -2px 28px -16px rgba(0,0,0,0.47);
         border-radius: 50px;
         color: #3E665F;
+        overflow: hidden;
+        
+}
+
+.product-container>ul{
+
+        display: none;
         
 }
 
@@ -65,7 +73,7 @@
 
 .sprite-container{
         width: 100%;
-        height: 70%;
+        height: 100%;
         display: flex;
         align-content: center;
         justify-content: center;
@@ -75,7 +83,7 @@
 
 .sprite-container>picture>img{
         object-fit: cover; /* Ajusta la imagen manteniendo la proporción */
-        width: 100%;
+        width: 900%;
         height: 100%;
 }
 
