--- a/src/components/main/products.css
+++ b/src/components/main/products.css
@@ -11,6 +11,7 @@
         margin-bottom: 2rem;   
         padding-left: 30px;
         padding-right: 30px;
+        z-index: 100;
 }
 
 .category-section-container{
